--- a/templates/quality.html
+++ b/templates/quality.html
@@ -46,12 +46,18 @@
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
 	<h1>Quality: About This Data Set</h1>
-        <p>Write a brief summary about the quality of the data set here</a></p>
+        <p>The data set presented in this site is about dog bite injuries. The data was provided by a legal firm, and is a collection of 
+        injury statistics associated with breeds of dogs that span from 1982 to 2012. For the most part, the data is good quality, although there are
+        some missing datum.
+        </p>
       </div>
 
     
       <div class="page-header">
 	<h2>Is the data complete?</h2>
+	<p> The data was not entirely complete. Some categories of injuries associated with a certain breed were missing or blank. This did not raise
+	much concern, as there were not many columns that had missing data. To account for this, I only plotted non-zero statistics for each breed of dog.
+	</p>
 	<p>If not, what is missing and what concerns does it raise?
 	What is your evidence for this?</p>
       </div>
@@ -61,12 +67,16 @@
 	<p>Does it make sense relative to itself? Does it match your
 	expectations? Are the distributions sensible? What is your
 	evidence for this?</p>
+		The data is pretty coherent in my opinion. I am not an expert in animals, but the data does seem to match my expectations, in that there
+		would be breeds of dogs that seem to be more aggressive than others. This is evident in the fact that certain breeds, like the pitbull, have
+		more counts of attacks than others, and it skews.
       </div>
 
       <div class="page-header">
 	<h2>Is the data correct?</h2>
 	<p>What aspects of this data can you verify? How did you do so? What did
 	you find?</p>
+		The data is correct, as it comes from a legal source.
       </div>
 
     </div> <!-- /container -->
