--- a/templates/about.html
+++ b/templates/about.html
@@ -56,35 +56,40 @@
       <div class="page-header">
 	<h2>Where did this data come from?</h2>
 	<p>This data came from a dataset found on Google Fusion Tables. You can check out the Fusion Tables <a href="https://www.google.com/fusiontables/DataSource?docid=1eInGJ-8kleGckiZJ9lUw-uNfr6ZAc2H03KVysHpt">here</a>.
-		The data 
+		The original source is from a legal firm, which can be found <a href="http://www.westernmarylandlawyers.com/dog-bite-injury-data/">here</a>.
 	</p>
       </div>
       
       <div class="page-header">
 	<h2>Who has access to it?</h2>
-	<p>The public has read access to the data, although write access belongs to the site that reported the data, which is a legal firm.</p>
+	<p>The public has read access to the data, however, write access belongs to the site that reported the data.</p>
       </div>
-
 	<div>
+		<h1>Plots of Dog Bite Injury Data</h1>
+		<p>Click the tabs to see different plots of statistics. These plots are sorted in ascending order, and only take into consideration
+		nonzero stats for each breed</p>
+	</div>
+	<div class="row">
 		<div class="col-xs-2"></div>
-		
-		<ul class="col-xs-8 nav nav-pills center-block">
-		<li class="active">
-			<a href="#deaths" data-toggle="tab">Deaths</a>
-		</li>
-		<li>
-			<a href="#adult-victims" data-toggle="tab">Adult Victims</a>
-		</li>
-		<li>
-			<a href="#child-victims" data-toggle="tab">Child Victims</a>
-		</li>
-		<li>
-			<a href="#maimings" data-toggle="tab">Maimings</a>
-		</li>
-		<li>
-			<a href="#bodily-harm" data-toggle="tab">Bodily Harm</a>
-		</li>
-		</ul>
+		<div class="col-xs-8">
+			<ul class="nav nav-pills">
+			<li class="active">
+				<a href="#deaths" data-toggle="tab">Deaths</a>
+			</li>
+			<li>
+				<a href="#adult-victims" data-toggle="tab">Adult Victims</a>
+			</li>
+			<li>
+				<a href="#child-victims" data-toggle="tab">Child Victims</a>
+			</li>
+			<li>
+				<a href="#maimings" data-toggle="tab">Maimings</a>
+			</li>
+			<li>
+				<a href="#bodily-harm" data-toggle="tab">Bodily Harm</a>
+			</li>
+			</ul>
+		</div>
 		<div class="col-xs-2"></div>
 	</div>
 	<div class="plots">
