--- a/templates/index.html
+++ b/templates/index.html
@@ -47,11 +47,14 @@
       <div class="jumbotron">
 	<h1>Interactive Data Science Project Exploratory Analysis Byte Example</h1>
         <p>This is the Exploratory Analysis Byte of the Interactive Data Science class.</p>
+        <p>By Stephen Chung</p>
       </div>
       
       <div class="page-header">
-	
+		<h1>Dog Bite Injury Table</h1>
+		<h4>A collection of data in the U.S and Canada from 1982 to 2012.</h4>
       </div> <!-- /page-header -->
+    
     
     
     <div class="button-toolbar" role="toolbar" id="headers" name="headers">
