--- a/templates/quality.html
+++ b/templates/quality.html
@@ -54,29 +54,33 @@
 
     
       <div class="page-header">
-	<h2>Is the data complete?</h2>
+      <h2>Is the data complete?</h2>
 	<p> The data was not entirely complete. Some categories of injuries associated with a certain breed were missing or blank. This did not raise
-	much concern, as there were not many columns that had missing data. To account for this, I only plotted non-zero statistics for each breed of dog.
+	much concern, as there were not many columns that had missing data. To account for this, I only plotted non-zero statistics for each breed of dog. After all,
+	there were also a number of breeds that had zero for an injury statistic, so this would cause plots to be even more skewed.
 	</p>
-	<p>If not, what is missing and what concerns does it raise?
-	What is your evidence for this?</p>
       </div>
       
       <div class="page-header">
 	<h2>Is the data coherent?</h2>
-	<p>Does it make sense relative to itself? Does it match your
-	expectations? Are the distributions sensible? What is your
-	evidence for this?</p>
+		<p>
 		The data is pretty coherent in my opinion. I am not an expert in animals, but the data does seem to match my expectations, in that there
 		would be breeds of dogs that seem to be more aggressive than others. This is evident in the fact that certain breeds, like the pitbull, have
-		more counts of attacks than others, and it skews.
+		more counts of attacks than others. Due to the fact that there are many breeds of dogs, it makes sense that this distribution is also skewed.
+		</p>
+		<p>In addition, before plotting, I had to clean up some data. As the data was stored via a JSON file instructed by
+		the assignment, all values were strings. Thus, I had to convert numerical strings to actual integers. Also, as mentioned before, I removed all rows with nonzero statistics.
+		Furthermore, there was a breed called "Total", which did not make sense for the purpose of plotting, so I removed that row as well before plotting.
+		</p>
       </div>
 
       <div class="page-header">
-	<h2>Is the data correct?</h2>
-	<p>What aspects of this data can you verify? How did you do so? What did
-	you find?</p>
-		The data is correct, as it comes from a legal source.
+		<h2>Is the data correct?</h2>
+		<p>
+		The data seems correct. I made a Google search to research common dog breeds that cause injuries, and the statistics found in my research generally match the data presented in this Byte.
+		You can read about it <a href="https://chicagoinjurycenter.com/common-breeds">here</a>.
+		</p>
+		
       </div>
 
     </div> <!-- /container -->
