--- a/templates/index.html
+++ b/templates/index.html
@@ -33,9 +33,11 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
+            <li class="active"><a href="/">Home</a></li>
             <li><a href="about">About This Data Set</a></li>
+            
 	    <li><a href="quality">Data Quality</a></li>
+	    <li><a href="narrative">Narrative</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -51,8 +53,8 @@
       </div>
       
       <div class="page-header">
-		<h1>Dog Bite Injury Table</h1>
-		<h4>A collection of data in the U.S and Canada from 1982 to 2012.</h4>
+		<h1>Wifi Connection Data</h1>
+		<h4>A collection of data that represents wifi connections from my iPhone</h4>
       </div> <!-- /page-header -->
     
     
