--- a/templates/narrative.html
+++ b/templates/narrative.html
@@ -63,6 +63,14 @@
 			<p>Thus, from the above explanations, you can ask and answer questions like: how active was Stephen this weekend?
 			</p>
 	      </div>
+  	      <div class="page-header">
+			<h2>Design Rationale</h2>
+			<p>
+			I chose to display the information in a timeline format because I wanted the user to visualize how my network connections were
+			changing with respect to the day. Combining this with colorcoding each data entry by SSID, you can clearly see the change in my 
+			environment.
+			</p>
+	      </div>
 		<div>
 <div class='tableauPlaceholder' id='viz1519599485567' style='position: relative'><noscript><a href='#'><img alt='My Wifi Connections In the Past Few Days ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;by&#47;byte3-updated&#47;Sheet1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='byte3-updated&#47;Sheet1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;by&#47;byte3-updated&#47;Sheet1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1519599485567');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 		
