--- a/templates/narrative.html
+++ b/templates/narrative.html
@@ -68,7 +68,7 @@
 			<p>
 			I chose to display the information in a timeline format because I wanted the user to visualize how my network connections were
 			changing with respect to the day. Combining this with colorcoding each data entry by SSID, you can clearly see the change in my 
-			environment.
+			environment. This display helps the user understand the data through color and time.
 			</p>
 	      </div>
 		<div>
